--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script src="index.js"></script>
-    <button onclick="show()" id="show">click me </button>
+    <button onclick="math()" id="show">click me </button> 
     
 </body>
 </html>
