chapter 6 Queation no 5

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chapter</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!-- chapter 5 : Question no 03 -->
+    <!-- <input id="userid" type="text" />
+    <button onclick="username()">send</button>
+    <h1 id="massge"></h1> -->
+    <!-- chapter 5 : Question no 04 -->
+
+    <!-- <input id="user" type="text" />
+    <button onclick="usernumber()">send</button>
+    <h1 id="massge"></h1> -->
+
     <script src="index.js"></script>
-    <button onclick="math()" id="show">click me </button> 
-    
-</body>
+  </body>
 </html>
