--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>chapter</title>
   </head>
+
   <body>
     <!-- chapter 5 : Question no 03 -->
     <!-- <input id="userid" type="text" />
@@ -15,6 +16,48 @@
     <!-- <input id="user" type="text" />
     <button onclick="usernumber()">send</button>
     <h1 id="massge"></h1> -->
+    <!-- chapter 6 : Qusetion no 01 -->
+    <!-- <input 
+    id="cityname"
+    placeholder="city name"
+    type="text"> 
+    <button onclick="username()">send</button>
+    <h1 id="massge"></h1> -->
+    <!-- Question no 02 -->
+    <!-- <input 
+    id="gender"
+    placeholder="gender"
+    type="text"> 
+    <button onclick="username()">send</button>
+    <h1 id="massge"></h1> -->
+    <!------------------------ Question no 03 ---------------------->
+    <!-- <input 
+    id="signal"
+    placeholder="signal colour"
+    type="text"> 
+    <button onclick="usercolour()">send</button>
+    <h1 id="massge"></h1> -->
+    <!-- <input 
+    id="fuel"
+    placeholder="Entre a current fuel"
+    type="number"> 
+    <button onclick="currentfuel()">send</button>
+    <h1 id="massge"></h1> -->
+    <input
+      id="totalMarks"
+      placeholder="Entre a total Marks"
+      type="number"
+      required
+    />
+    <input
+      id="obtainMarks"
+      placeholder="Entre a obtain Mark"
+      type="number"
+      required
+    />
+    <button onclick="marksSheet()">send</button>
+
+    <div id="marks"></div>
 
     <script src="index.js"></script>
   </body>
