Question no 8 complete

--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
     type="number"> 
     <button onclick="currentfuel()">send</button>
     <h1 id="massge"></h1> -->
-    <input
+    <!-- ============Question ============== -->
+    <!-- <input
       id="totalMarks"
       placeholder="Entre a total Marks"
       type="number"
@@ -55,8 +56,16 @@
       type="number"
       required
     />
-    <button onclick="marksSheet()">send</button>
-
+    <button onclick="marksSheet()">send</button> -->
+    <!-- <div id="marks"></div> -->
+    <!-- =================Question 09 =============== -->
+    <input
+      id="Temperature"
+      placeholder="current Temperature"
+      type="number"
+      required
+    />
+    <button onclick="check()">send</button>
     <div id="marks"></div>
 
     <script src="index.js"></script>
