Qurestion no 10 complete

--- a/index.html
+++ b/index.html
@@ -58,15 +58,36 @@
     />
     <button onclick="marksSheet()">send</button> -->
     <!-- <div id="marks"></div> -->
-    <!-- =================Question 09 =============== -->
-    <input
+    <!-- =================Question 10 =============== -->
+    <!-- <input
       id="Temperature"
       placeholder="current Temperature"
       type="number"
       required
     />
     <button onclick="check()">send</button>
-    <div id="marks"></div>
+    <div id="marks"></div> -->
+    <!-- ====================Question================ -->
+    <!-- <input  placeholder="" type="text" required /> -->
+    <div
+      id="calculator"
+      style="width: 329px; height: 20px; border: 2px solid black"
+    ></div>
+    <div id="btns">
+      <button id="*" value="*" onclick="clicked(this.value)">*</button>
+      <button id="-" value="-" onclick="clicked(this.value)">-</button>
+      <button id="/" value="/" onclick="clicked(this.value)">/</button>
+      <button id="+" value="+" onclick="clicked(this.value)">+</button>
+      <!-- <button id="click" onclick="button()"> -->
+      <!-- <button>2</button>
+        <button>3</button>
+        <button>4</button>
+        <button>5</button>
+        <button>+</button>
+        <button>-</button>
+        <button>/</button> -->
+      <!-- </button> -->
+    </div>
 
     <script src="index.js"></script>
   </body>
