new chapter 12-13 Question no 01 complete

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div id="marks"></div> -->
     <!-- ====================Question================ -->
     <!-- <input  placeholder="" type="text" required /> -->
-    <div
+    <!-- <div
       id="calculator"
       style="width: 329px; height: 20px; border: 2px solid black"
     ></div>
@@ -78,7 +78,7 @@
       <button id="-" value="-" onclick="clicked(this.value)">-</button>
       <button id="/" value="/" onclick="clicked(this.value)">/</button>
       <button id="+" value="+" onclick="clicked(this.value)">+</button>
-      <!-- <button id="click" onclick="button()"> -->
+   <button id="click" onclick="button()"> -->
       <!-- <button>2</button>
         <button>3</button>
         <button>4</button>
@@ -87,7 +87,16 @@
         <button>-</button>
         <button>/</button> -->
       <!-- </button> -->
-    </div>
+     <!-- </div>  --> 
+      <!-- ================================chapter 12-13==================== -->
+       <!-- Question no 01 -->
+        <input
+        type="text"
+        placeholder="text"
+        id="changetonumber"/>
+        <button id="button" onclick="number()">send</button>
+        <div id="print"></div>
+
 
     <script src="index.js"></script>
   </body>
