chapter 12-13  Question 03  complete

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     />
     <button onclick="marksSheet()">send</button> -->
     <!-- <div id="marks"></div> -->
-    <!-- =================Question 10 =============== -->
+    <!-- ================= Question 10 =============== -->
     <!-- <input
       id="Temperature"
       placeholder="current Temperature"
@@ -67,7 +67,7 @@
     />
     <button onclick="check()">send</button>
     <div id="marks"></div> -->
-    <!-- ====================Question================ -->
+    <!-- ==================== Question no 11 ================ -->
     <!-- <input  placeholder="" type="text" required /> -->
     <!-- <div
       id="calculator"
@@ -79,24 +79,33 @@
       <button id="/" value="/" onclick="clicked(this.value)">/</button>
       <button id="+" value="+" onclick="clicked(this.value)">+</button>
    <button id="click" onclick="button()"> -->
-      <!-- <button>2</button>
+    <!-- <button>2</button>
         <button>3</button>
         <button>4</button>
         <button>5</button>
         <button>+</button>
         <button>-</button>
         <button>/</button> -->
-      <!-- </button> -->
-     <!-- </div>  --> 
-      <!-- ================================chapter 12-13==================== -->
-       <!-- Question no 01 -->
-        <input
+    <!-- </button> -->
+    <!-- </div>  -->
+    <!-- ==========================chapter 12-13==================== -->
+    <!-- ...................Question no 01................ -->
+    <!-- <input
         type="text"
         placeholder="text"
         id="changetonumber"/>
         <button id="button" onclick="number()">send</button>
-        <div id="print"></div>
-
+        <div id="print"></div> -->
+    <!-- ..........................Question no 02 ..................... -->
+    <!-- <input
+        type="number"
+        placeholder="Enter two number"
+        id="user"/>
+        <button id="button" onclick="number()">send</button> -->
+    <!-- .................Question no 03................ -->
+    <!-- <input type="number" placeholder="Enter two number" id="user" />
+    <button id="button" onclick="number()" onkeypress="number()">send</button>
+    <div id="marks"></div> -->
 
     <script src="index.js"></script>
   </body>
