--- a/index.html
+++ b/index.html
@@ -7,23 +7,26 @@
   </head>
 
   <body>
-    <!-- chapter 5 : Question no 03 -->
+    <!-- --------------chapter 5--------------  -->
+    <!-- ---------------Question no 03------------- -->
     <!-- <input id="userid" type="text" />
     <button onclick="username()">send</button>
     <h1 id="massge"></h1> -->
-    <!-- chapter 5 : Question no 04 -->
+
+    <!-- --------------------Question no 04------------------- -->
 
     <!-- <input id="user" type="text" />
     <button onclick="usernumber()">send</button>
     <h1 id="massge"></h1> -->
-    <!-- chapter 6 : Qusetion no 01 -->
+    <!---------------------- chapter 6 ----------------- -->
+    <!-- --------------------Question no 01------------------->
     <!-- <input 
     id="cityname"
     placeholder="city name"
     type="text"> 
     <button onclick="username()">send</button>
     <h1 id="massge"></h1> -->
-    <!-- Question no 02 -->
+    <!-- -------------------------Question no 02--------------- -->
     <!-- <input 
     id="gender"
     placeholder="gender"
@@ -36,12 +39,13 @@
     placeholder="signal colour"
     type="text"> 
     <button onclick="usercolour()">send</button>
-    <h1 id="massge"></h1> -->
+    <h1 id="massage"></h1> -->
+    <!-- ----------------------Question no 04-------------------- -->
     <!-- <input 
     id="fuel"
     placeholder="Entre a current fuel"
     type="number"> 
-    <button onclick="currentfuel()">send</button>
+    <button onclick="usernumber()">send</button>
     <h1 id="massge"></h1> -->
     <!-- ============Question ============== -->
     <!-- <input
