chapter 26-30 Question no 02  complete

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
     <button id="button" onclick="number()" onkeypress="number()">send</button>
     <div id="marks"></div> -->
 
+    <!-- ====================chapter no 26-30====================== -->
+    
+      
     <script src="index.js"></script>
   </body>
 </html>
