chapter no 30   Question no 8 !.....   new chapter start chapter no 31 -34 Question no 01 to 03 .....

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
     <div id="marks"></div> -->
 
     <!-- ====================chapter no 26-30====================== -->
-    
+         <!-- This chapter no need html because used prompt function -->
       
     <script src="index.js"></script>
   </body>
