--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
 
     <!-- ====================chapter no 26-30====================== -->
          <!-- This chapter no need html because used prompt function -->
+          <!-- ============================chapter no 31-34================= -->
+           <!-- <h1> K-Electric Bill</h1> -->
       
     <script src="index.js"></script>
   </body>
